tests/init_covariant_props_in_ctor/init_covariant_props_in_ctor.exp
Error ---------------------------------------------------------------- a.js:13:3

Error: a.js:13
 13: a.prop = 2;                   // ERROR: Cannot assign outside of ctor to + prop
       ^^^^ Cannot assign `2` to `a.prop` because property `prop` is not writable.

Error --------------------------------------------------------------- a.js:20:17

Error: a.js:20
 20:     this.prop = prop;         // ERROR: we should not be assigning a string here
                     ^^^^ Cannot assign `prop` to `this.prop` because string [1] is incompatible with number [2].
  References:
   19:   constructor(prop: string) {
                           ^^^^^^ [1]: string
   16:   +prop: number;
                ^^^^^^ [2]: number

Error --------------------------------------------------------------- a.js:21:10

Error: a.js:21
 21:     this.m = () => {};        // ERORR: cannot assign method
              ^ Cannot assign function to `this.m` because property `m` is not writable.

Error --------------------------------------------------------------- a.js:47:12

Error: a.js:47
 47:       this.prop = prop;       // ERROR: the initilized object can only be
                ^^^^ Cannot assign `prop` to `this.prop` because property `prop` is not writable.

Error --------------------------------------------------------------- a.js:61:10

Error: a.js:61
 61:     this.prop = 1;            // ERROR
              ^^^^ Cannot assign `1` to `this.prop` because property `prop` is not writable.

Error --------------------------------------------------------------- a.js:70:17

Error: a.js:70
 70:     this.prop = "";           // ERROR
                     ^^ Cannot assign empty string to `this.prop` because string [1] is incompatible with number [2].
  References:
   70:     this.prop = "";           // ERROR
                       ^^ [1]: string
    5:   +prop: number;
                ^^^^^^ [2]: number

Error ---------------------------------------------------------------- a.js:74:7

Error: a.js:74
 74: class G extends F {
           ^ Cannot extend `F` [1] with `G` because property `prop` is write-only in `G` [2] but read-only in `A` [3].
  References:
   74: class G extends F {
                       ^ [1]: `F`
   74: class G extends F {
             ^ [2]: `G`
    4: class A {
             ^ [3]: `A`


Found 7 errors
